<resources>
    <string name="app_name">WeCart</string>
    <string name="select_product">Select Product</string>
    <string name="submit">Submit</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="not_in_stock_message">The product is in not stock.</string>
    <string name="in_stock_message">The product is in stock, please edit the info below</string>
    <string name="title_activity_importing_product">ImportingProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="click_here_to_upload_your_excel_sheet">Click Here to upload your excel Sheet</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="product_name">Product Name</string>
    <string name="search">Search</string>
    <string name="quantity">Quantity</string>
    <string name="inventory">Inventory</string>
    <string name="price_and_quantity">Price and Quantity</string>
    <string name="per">per</string>
    <string name="check_stock_status">Check Stock Status</string>
    <string name="delete_success">Delete Product Successfully</string>
    <string name="storeDetailName">Store Name</string>
    <string name="storeDesc">Arceo Ranch is a family farm in the Sacramento Delta specializing in unique varieties of cherries, pears, kiwis, apples, stone fruit and cut flowers.</string>
    <string name="storeOwner">meet:    Store Owner</string>
    <string name="storeAddress">Store Address</string>
    <string name="storePhone">Store Phone</string>
    <string name="storeEmail">Store Email</string>
    <string-array name="unit_array">
        <item>lb</item>
        <item>pc</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_seller_bottom_navigation">SellerBottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_seller_instruction">Since you are the new seller, please create a new store</string>
    <string name="oldSellerInstruction">Add more product and check your orders … </string>
    <string name="please_type_your_question_here">Please type your question here</string>
    <string name="community_in_construction">This community market is in construction.\n\nHappy New Year! See you in 2022:)</string>
</resources>