<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="6dp">

    <RelativeLayout
        android:layout_width="408dp"
        android:layout_height="85dp"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/imgViewProduct"
            android:layout_width="63dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/textViewProductName"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="216dp"
            android:layout_toEndOf="@+id/imgViewProduct"
            android:fontFamily="@font/dancing_script_bold"
            android:text="@string/product_name"
            android:textColor="#141E61"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnEditProduct"
            android:layout_width="55dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="110dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/merriweather_blackitalic"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="#141E61"
            android:textSize="8sp"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/textViewProductPriceAndQuantity"
            android:layout_width="101dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/imgViewProduct"
            android:text="@string/price_and_quantity"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>